fixed display bug

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -1390,13 +1390,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script type=\"text/javascript\" src=\"code.jquery.com/jquery-latest.min.js\"></script>\n",
+       "\n",
+       "<script>\n",
+       "jQuery(document).ready(function(){\n",
+       "\tvar native_width = 0;\n",
+       "\tvar native_height = 0;\n",
+       "  $(\".large\").css(\"background\",\"url('\" + $(\".small\").attr(\"src\") + \"') no-repeat\");\n",
+       "\t$(\".magnify\").mousemove(function(e){\n",
+       "\t\tif(!native_width && !native_height)\n",
+       "\t\t{\n",
+       "\t\t\tvar image_object = new Image();\n",
+       "\t\t\timage_object.src = $(\".small\").attr(\"src\");\n",
+       "\t\t\tnative_width = image_object.width;\n",
+       "\t\t\tnative_height = image_object.height;\n",
+       "\t\t}\n",
+       "\t\telse\n",
+       "\t\t{\n",
+       "\t\t\tvar magnify_offset = $(this).offset();\n",
+       "\t\t\tvar mx = e.pageX - magnify_offset.left;\n",
+       "\t\t\tvar my = e.pageY - magnify_offset.top;\n",
+       "\n",
+       "\t\t\tif(mx < $(this).width() && my < $(this).height() && mx > 0 && my > 0)\n",
+       "\t\t\t{\n",
+       "\t\t\t\t$(\".large\").fadeIn(100);\n",
+       "\t\t\t}\n",
+       "\t\t\telse\n",
+       "\t\t\t{\n",
+       "\t\t\t\t$(\".large\").fadeOut(100);\n",
+       "\t\t\t}\n",
+       "\t\t\tif($(\".large\").is(\":visible\"))\n",
+       "\t\t\t{\n",
+       "\t\t\t\tvar rx = Math.round(mx/$(\".small\").width()*native_width - $(\".large\").width()/2)*-1;\n",
+       "\t\t\t\tvar ry = Math.round(my/$(\".small\").height()*native_height - $(\".large\").height()/2)*-1;\n",
+       "\t\t\t\tvar bgp = rx + \"px \" + ry + \"px\";\n",
+       "\n",
+       "\t\t\t\tvar px = mx - $(\".large\").width()/2;\n",
+       "\t\t\t\tvar py = my - $(\".large\").height()/2;\n",
+       "\t\t\t\t$(\".large\").css({left: px, top: py, backgroundPosition: bgp});\n",
+       "\t\t\t}\n",
+       "\t\t}\n",
+       "\t})\n",
+       "})\n",
+       "</script>\n",
+       "\n",
+       "<style>\n",
+       "* {margin: 0; padding: 0;}\n",
+       ".magnify {width: 400px; margin: 50px auto; position: relative; cursor: none}\n",
+       ".large {\n",
+       "\twidth: 200px; height: 200px;\n",
+       "\tposition: absolute;\n",
+       "\tborder-radius: 100%;\n",
+       "\n",
+       "\tbox-shadow: 0 0 0 7px rgba(255, 255, 255, 0.85),\n",
+       "\t0 0 7px 7px rgba(0, 0, 0, 0.25),\n",
+       "\tinset 0 0 40px 2px rgba(0, 0, 0, 0.25);\n",
+       "\n",
+       "\tdisplay: none;\n",
+       "}\n",
+       ".small { display: block; }\n",
+       "</style>\n",
+       "\n",
+       "<div class=\"magnify\">\n",
+       "<div class=\"large\"></div>\n",
+       "<img class=\"small\" src=\"resources/img_dir/potato.jpeg\" width=\"200\"/>\n",
+       "</div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from resources.microscope import plot_html_microscope\n",
     "plot_html_microscope('resources/img_dir/potato.jpeg')"
